update doc for auth handlers
