# docs/swagger.json
@@ -13,6 +13,37 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/users/auth/refresh": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "refresh access token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {}
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/users/auth/sing-in": {
             "post": {
                 "consumes": [
@@ -24,7 +55,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "authorizate user",
+                "summary": "user authentication",
                 "parameters": [
                     {
                         "description": "phone number and password",
@@ -43,8 +74,8 @@
                             "type": "string"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {}
                     },
                     "500": {
@@ -128,6 +159,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "cookie"
         }
     }
 }
